collapse animation adjusted with z-index, corrected unwanted left margin on carousel (mobile version)

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -61,8 +61,6 @@
         box-sizing: content-box;
         position: absolute;
         top:0;
-        left: -5px;
-        right: -5px;
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -84,7 +82,7 @@
     }
     &__arrow-left {
         @include next-prev-arrow;
-        left: 0;
+        left: 5px;
         top: 0;
         display: flex;
         justify-content: center;
@@ -103,7 +101,7 @@
     }
     &__arrow-right {
         @include next-prev-arrow;
-        right: 0;
+        right: 3px;
         top: 0;
         display: flex;
         align-items: center;
