--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -16,6 +16,8 @@
         border: none;
         font-size: 2.4rem;
         font-weight: 700;
+        z-index: 2;
+        position: relative;
         img {
             width: 32px;
             height: 32px;
